--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,9 @@
 title: angular_init (ngi)
 email: frontendcollisionblog@gmail.com
 url: http://joshbeam.github.io
-#baseurl: /angular_init
-baseurl: 
+baseurl: /angular_init
+#baseurl: 
 description: "angular_init is the simple AngularJS template generator"
-
-# Footer settings
-footer: http://frontendcollisionblog.com
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
